package net.javaguides.testpfe_backend.reservation.domain;

public enum Activity {
    OPEN_LAB,
    WORKSHOP,
    ACCOPAGNEMENT
}
