package net.javaguides.testpfe_backend.reservation.domain;

public enum AgeGroup {
    ADULT,
    KID
}
