package net.javaguides.testpfe_backend.users.domain;

public enum Sexe {
    MALE,
    FEMALE
}
