package net.javaguides.testpfe_backend.users.domain;

public enum UserRole {
    USER ,
    ADMIN
}
